# universal-reader

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  INDEX.md  QUICK_REFERENCE.md  README.md  REFACTORING_COMPLETE.txt  REFACTORING_DONE.md  REFACTORING_NOTES.md  REFACTORING_SUMMARY.md  STRUCTURE_COMPARISON.md  pyproject.toml
docs/: api.md  configuration.md  hardware.md  index.md  setup.md  websocket.md
src/reader/: config.py  logger.py  main.py  models.py  startup.py  state.py  ws_client.py
src/reader/dashboard/: app.py  auth.py  deps.py
src/reader/dashboard/routers/: __init__.py  api.py  auth.py
src/reader/dashboard/templates/: base.html  debug.html  index.html  login.html
src/reader/handlers/: __init__.py  buzzer_handler.py  lcd_handler.py  message_handlers.py  tag_scan_handler.py
src/reader/hardware/: buzzer.py  lcd.py  rc522.py  rc522_irq.py
src/reader/models/: __init__.py  api.py  config.py  state.py  websocket.py
tests/: test_reader.py
